Endpoint.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: homeowner-gateway
subsets:
  - addresses:
      - ip: 34.107.132.144
    ports:
      - port: 8080
